kubernetes_file/stateful/mysql/mysql.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: stateful
  name: mysql
spec:
  serviceName: "mysql"
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql
            - mountPath: /docker-entrypoint-initdb.d/evolve.sql
              name: config-volume
              subPath: evolve.sql
      volumes:
        - name: config-volume
          configMap: 
            name: mysql-config 

  volumeClaimTemplates:
    - metadata:
        name: mysql
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard"
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  namespace: stateful
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
