kubernetes_file/stateful/mysql/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mysql-gateway
  namespace: stateful
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 3306
        name: tcp-mysql
        protocol: TCP
      hosts:
        - "*"
