kubernetes_file/stateful/mysql/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-virtual-service
  namespace: stateful
spec:
  hosts:
    - "*"
  gateways:
    - mysql-gateway
  tcp:
    - match:
        - port: 3306
      route:
        - destination:
            host: mysql
            port:
              number: 3306
